another tweak to events for IE7 and fixed need to know widget layout on IE7

--- a/src/components/c-events-item/style.ie.styl
+++ b/src/components/c-events-item/style.ie.styl
@@ -19,8 +19,8 @@
   /* PARENT OVVERIDES */
 
   .c-events-list & {
-    width: 50%;
+    width: 48%;
     float:left;
-
+    margin-right: 1%
   }
 }
