--- a/src/components/c-need-to-know-widget/style.ie.styl
+++ b/src/components/c-need-to-know-widget/style.ie.styl
@@ -6,7 +6,7 @@
   &__slide {
     ieoldcf();
     img, div {
-      width: 50%;
+      width: 46%;
       float:left;
     }
     div {
